--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "http-server": "^0.11.1",
+    "http-server": "^14.0.0",
+    "mini-css-extract-plugin": "^2.4.6",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
